--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="logout">Keluar</string>
     <string name="register_image">image asset for registration page</string>
     <string name="login_image">Image asset for login page</string>
+    <string name="create_story">create story button</string>
+    <string name="story_image">image of the story</string>
 </resources>
