--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -40,4 +40,6 @@
     <string name="proceed_login">Lanjut masuk</string>
     <string name="language_setting">Pengaturan bahasa</string>
     <string name="upload_story">Unggah Cerita</string>
+    <string name="permission_granted">Permintaan izin diterima</string>
+    <string name="permission_denied">Perimntaan izin ditolak</string>
 </resources>
