--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="upload_story">Upload Story</string>
     <string name="permission_granted">Permission request granted</string>
     <string name="permission_denied">Permission request denied</string>
+    <string name="landing_page_image">Image asset for landing page</string>
 </resources>
