--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -43,4 +43,5 @@
     <string name="permission_granted">Permintaan izin diterima</string>
     <string name="permission_denied">Perimntaan izin ditolak</string>
     <string name="landing_page_image">Aset gambar untuk halaman landing</string>
+    <string name="uploader_name">Nama pengunggah</string>
 </resources>
