--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="permission_granted">Permission request granted</string>
     <string name="permission_denied">Permission request denied</string>
     <string name="landing_page_image">Image asset for landing page</string>
+    <string name="uploader_name">Name of the uploder</string>
 </resources>
