fix: id-localization

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -26,14 +26,14 @@
     <string name="capture_icon">Ikon ambil gambar</string>
     <string name="switch_icon">Ikon ganti kamera</string>
     <string name="image_holder">Tempat meletakkan gambar sebelum diunggah</string>
-    <string name="story_retrieval_error">An error occurred while retrieving stories</string>
-    <string name="camera_display_failure">Failed to display Camera.</string>
-    <string name="image_capture_failure">Failed to capture image</string>
-    <string name="invalid_email">Invalid email format</string>
-    <string name="successful_log_in">You have logged in successfully</string>
-    <string name="success">Success</string>
+    <string name="story_retrieval_error">Terjadi kesalahan saat pengambilan data story</string>
+    <string name="camera_display_failure">Gagal menampilkan kamera</string>
+    <string name="image_capture_failure">Gagal mengambil gambar</string>
+    <string name="invalid_email">Format email tidak valid</string>
+    <string name="successful_log_in">Berhasil login</string>
+    <string name="success">Berhasil</string>
     <string name="failed">Gagal</string>
-    <string name="token_retrieval_failure">Failed to retrieve token. Please try again.</string>
+    <string name="token_retrieval_failure">Gagal mendapatkan token. Coba lagi</string>
     <string name="continue_login">Lanjut</string>
     <string name="invalid_password">Password tidak boleh kurang dari 8 karakter</string>
     <string name="registration_success">akun berhasil dibuat</string>
