feat: story locations on map

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -44,6 +44,6 @@
     <string name="permission_denied">Permintaan izin ditolak</string>
     <string name="landing_page_image">Aset gambar untuk halaman landing</string>
     <string name="uploader_name">Nama pengunggah</string>
-    <string name="title_activity_maps">Story di Indonesia</string>
+    <string name="title_activity_maps">Story di Seluruh Dunia</string>
     <string name="maps">Maps</string>
 </resources>
