--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -47,4 +47,5 @@
     <string name="title_activity_maps">Story di Seluruh Dunia</string>
     <string name="maps">Maps</string>
     <string name="retry">Coba lagi</string>
+    <string name="include_my_location">Tambahkan lokasi saya</string>
 </resources>
